tests/ui/impl-trait/hidden-type-is-opaque-2.next.stderr
error[E0282]: type annotations needed
  --> $DIR/hidden-type-is-opaque-2.rs:10:17
   |
LL |     Thunk::new(|mut cont| {
   |                 ^^^^^^^^
LL |
LL |         cont.reify_as();
   |              -------- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
LL |     Thunk::new(|mut cont: /* Type */| {
   |                         ++++++++++++

error[E0282]: type annotations needed
  --> $DIR/hidden-type-is-opaque-2.rs:21:17
   |
LL |     Thunk::new(|mut cont| {
   |                 ^^^^^^^^
LL |
LL |         cont.reify_as();
   |              -------- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
LL |     Thunk::new(|mut cont: /* Type */| {
   |                         ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
